# essvi

./: .gitignore  LICENSE  README.md  pyproject.toml
derived/: dispersion.py  weights.py
sample/: SAMPLE_NOTICE.md  load_example.py  vix_series.parquet
sample/spx_2026-01-22/: event_vol.parquet  forward_vol.parquet  forward_vol_grid.parquet  iv_history.parquet  manifest.json  option_quotes.parquet  underlier_state.parquet  vol_surface_grid.parquet  vol_surface_params.parquet  vrp_implied.parquet
src/essvi/: __init__.py  constants.py  schemas.py
src/essvi/diagnostics/: derived.py  grid.py  iv_history.py  reprice.py  sensitivities.py  verify.py
src/essvi/forward/: deam_fit.py  parity.py  term_structure.py
src/essvi/io/: rates.py  underlier.py  writer.py
src/essvi/iv/: black.py  deam.py  deam_gpu.py
src/essvi/pipeline/: fit_core.py  rounding.py  snapshot.py
src/essvi/quotes/: moneyness.py  reduce.py
src/essvi/repro/: xyz_reference.py
src/essvi/ssvi/: constraints.py  essvi.py  fit.py  model.py  objective.py
tests/: test_black_roundtrip.py  test_derived.py  test_dispersion.py  test_ssvi_gradients.py  test_ssvi_model.py  test_ssvi_xyz.py  test_underlier.py  test_verify.py  test_weights.py
