[project]
name = "essvi"
version = "0.4.0"
description = "Arbitrage-free fitted implied-volatility surfaces for US equity options"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "numba>=0.60",
    "pyarrow>=16",
    "duckdb>=1.0",
    "polars>=1.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/essvi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
